--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,19 +1,23 @@
 project:
-  type: website
+  type: book
 
-website:
-  title: "Aruvu Docs"
-  navbar:
-    right:
-      - about.qmd
-      - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+book:
+  title: "aruvu-docs"
+  author: "Aruvu Collab"
+  date: "19/7/2024"
+  chapters:
+    - index.qmd
+    - intro.qmd
+    - summary.qmd
+    - references.qmd
+
+bibliography: references.bib
+
 format:
   html:
     theme: cosmo
-    css: styles.css
+  pdf:
+    documentclass: scrreprt
 
 
 
